--- a/navi.html
+++ b/navi.html
@@ -1,33 +1,8 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Navi • Dashboard</title>
-<link rel="stylesheet" href="assets/css/style.css"/>
-<script defer src="assets/js/state.js"></script>
-</head><body>
-<div class="container"><div class="header"><div class="brand">Navi</div><div class="list"><a class="pill" href="results.html">Back to Nova</a></div><div class="badge">Bridge connected</div></div>
-<div class="grid cols-3">
-  <div class="card"><div class="kicker">Today</div><div class="h2">Your Top Matches</div><ul id="top" class="p"></ul></div>
-  <div class="card"><div class="kicker">Assets</div><div class="p">Resume, Cover Letters, Certificates.</div>
-    <button class="btn block" onclick="makeResume()">Generate Resume Draft</button>
-    <button class="btn ghost block" onclick="makeCover()">Generate Cover Letter</button>
-  </div>
-  <div class="card"><div class="kicker">Opportunities</div><div class="p">Use your top matches as search queries on job sites.</div>
-    <button class="btn block" onclick="searchJobs()">Search Jobs</button>
-    <button class="btn ghost block" onclick="openTraining()">Suggested Training</button>
-  </div>
-</div>
-<div class="footer small">This is a lightweight bridge.</div>
-</div>
+<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Navi • Dashboard</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script></head>
+<body><div class="container"><div class="header"><div class="brand">Navi</div><div class="badge">Bridge connected</div></div>
+<div class="card"><h1 class="h1">Your Top Matches</h1><ul id="top" class="p"></ul></div></div>
 <script>
-  const list = (JSON.parse(localStorage.getItem('nova.matches')||'[]')).slice(0,5);
-  const ul = document.getElementById('top'); ul.innerHTML = list.map(m=> `<li>${m.title} <span class="small">(${m.score})</span></li>`).join('');
-  function makeResume(){ const name = localStorage.getItem('nova.user')||'Candidate'; const role=list[0]?.title||'Target Role';
-    const blob = new Blob([`${name}\n———\nTarget: ${role}\n\nHighlights:\n- ${(JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')).slice(0,6).map(t=> (t.name||t)).join('\n- ')}\n\nCategories: ${(JSON.parse(localStorage.getItem('nova.selectedCategories')||'[]')).join(', ')}\n`],{type:'text/plain'});
-    const url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='Resume_Draft.txt'; a.click(); URL.revokeObjectURL(url); }
-  function makeCover(){ const role=list[0]?.title||'the role'; const name=localStorage.getItem('nova.user')||'Candidate';
-    const blob=new Blob([`Dear Hiring Team,\n\nI’m excited to apply for ${role}. My strengths include:\n${(JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')).slice(0,6).map(t=> '- '+(t.name||t)).join('\n')}\n\nSincerely,\n${name}`],{type:'text/plain'});
-    const url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='Cover_Letter_Draft.txt'; a.click(); URL.revokeObjectURL(url); }
-  function searchJobs(){ const q=encodeURIComponent(list[0]?.title||'Analyst'); window.open('https://www.indeed.com/jobs?q='+q,'_blank'); }
-  function openTraining(){ const q=encodeURIComponent(list[0]?.title||'Analyst'); window.open('https://www.coursera.org/search?query='+q,'_blank'); }
-</script>
-</body></html>
+const list=(JSON.parse(localStorage.getItem('nova.matches')||'[]')).slice(0,5);
+document.getElementById('top').innerHTML=list.map(m=> `<li>${m.title} <span class="small">(${m.score})</span></li>`).join('');
+</script></body></html>
