--- a/plans.html
+++ b/plans.html
@@ -1,6 +1,5 @@
-<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Nova • Plans</title><link rel="stylesheet" href="assets/css/style.css"/>
-<script type="text/javascript" src="https://payhip.com/payhip.js"></script><script defer src="assets/js/state.js"></script></head>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Nova • Plans</title><link rel="stylesheet" href="assets/css/style.css"/><script type="text/javascript" src="https://payhip.com/payhip.js"></script><script defer src="assets/js/state.js"></script></head>
 <body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Payhip Connected</div></div>
 <div class="card"><h1 class="h1">Choose your plan</h1><div class="grid cols-4">
   <div class="card"><div class="small">Resource</div><div class="h1" style="font-size:18px">How to Know Your Purpose</div><a href="https://payhip.com/b/N7Lvg" class="payhip-buy-button" data-theme="green" data-product="N7Lvg">Buy Now</a></div>
