--- a/reflection.html
+++ b/reflection.html
@@ -1,17 +1,4 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Nova • Reflection</title>
-<link rel="stylesheet" href="assets/css/style.css"/>
-<script defer src="assets/js/state.js"></script>
-</head><body>
-<div class="container"><div class="header"><div class="brand">Nova</div><div class="list"><a class="pill" href="results.html">Back to Results</a></div><div class="badge">Bridge step</div></div>
-<div class="card"><h1 class="h1">Which moment are you in?</h1>
-<div class="grid cols-2">
-  <button class="btn ghost" onclick="setRef('starting')">Starting a career</button>
-  <button class="btn ghost" onclick="setRef('switching')">Switching careers</button>
-  <button class="btn ghost" onclick="setRef('leveling')">Leveling up</button>
-  <button class="btn ghost" onclick="setRef('restarting')">Restarting</button>
-</div>
-<div class="hr"></div><a class="btn primary" href="plans.html">Next • Choose Plan</a></div></div>
-<script>function setRef(s){if(window.NOVA&&NOVA.state){NOVA.state.reflection=s;NOVA.save&&NOVA.save();}}</script>
-</body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Nova • Reflection</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script></head>
+<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Bridge step</div></div>
+<div class="card"><h1 class="h1">Which moment are you in?</h1><div class="grid cols-2"><button class="btn ghost">Starting a career</button><button class="btn ghost">Switching careers</button><button class="btn ghost">Leveling up</button><button class="btn ghost">Restarting</button></div><div class="hr"></div><a class="btn primary" href="plans.html">Next • Choose Plan</a></div></div></body></html>
