--- a/results.html
+++ b/results.html
@@ -1,10 +1,7 @@
-<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Nova • Results</title><link rel="stylesheet" href="assets/css/style.css"/>
-<script defer src="assets/js/state.js"></script><script defer src="assets/js/data.js"></script></head>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Nova • Results</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script><script defer src="assets/js/data.js"></script></head>
 <body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">PDF & Navi ready</div></div>
-<div class="card"><h1 class="h1">Your results</h1><div id="summary" class="p"></div><div class="hr"></div>
-<table><thead><tr><th>Occupation</th><th>Score</th><th class="small">SOC</th></tr></thead><tbody id="rows"></tbody></table>
-<div class="hr"></div><a class="btn" href="reflection.html">Continue • Reflection</a></div></div>
+<div class="card"><h1 class="h1">Your results</h1><div id="summary" class="p"></div><div class="hr"></div><table><thead><tr><th>Occupation</th><th>Score</th><th class="small">SOC</th></tr></thead><tbody id="rows"></tbody></table><div class="hr"></div><a class="btn" href="reflection.html">Continue • Reflection</a></div></div>
 <script>
 (async ()=>{
   const data = await loadAllData();
@@ -13,7 +10,7 @@
     selectedCategoryIds: JSON.parse(localStorage.getItem('nova.selectedCategoryIds')||'[]'),
     selectedTraits: JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')
   }, 40);
-  NOVA.state.matches = matches; NOVA.save();
+  if(window.NOVA&&NOVA.state){ NOVA.state.matches=matches; NOVA.save(); }
   document.getElementById('summary').innerHTML = `
     <div class="list">${(JSON.parse(localStorage.getItem('nova.selectedCategories')||'[]')).map(c=>'<span class="pill">'+c+'</span>').join('')}</div>
     <div class="list">${(JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')).slice(0,10).map(t=>'<span class="pill">'+(t.name||t)+'</span>').join('')}</div>`;
