--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Nova • Welcome</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script></head>
-<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">v8.7d • QA</div></div>
+<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">v8.7e • Unified</div></div>
 <div class="card"><div class="grid cols-2" style="align-items:start">
-<div><div class="small">Welcome</div><h1 class="h1">Find your purpose and get clarity.</h1><p class="p"><strong>89% of people do not know their purpose.</strong> Nova will help you find it and get clarity around your purpose — then Navi will help you act on it.</p>
-<a class="btn primary" href="categories.html">Start • Choose My Categories</a> <a class="pill" style="margin-left:10px" href="qa.html">QA</a></div>
-<div class="card" style="background:transparent;border:1px dashed var(--line)"><div class="small">Returning User</div>
-<label class="small">Username</label><input class="btn block" placeholder="e.g. drew"/><div style="height:8px"></div>
-<label class="small">PIN</label><input class="btn block" placeholder="4–6 digits"/></div>
-</div></div></body></html>
+  <div>
+    <div class="small">Welcome</div>
+    <h1 class="h1">Find your purpose and get clarity.</h1>
+    <p class="p"><strong>89% of people do not know their purpose.</strong> Nova will help you find it and get clarity around your purpose — then Navi will help you act on it.</p>
+    <a class="btn primary" href="categories.html">Start • Choose My Categories</a> <a class="pill" style="margin-left:10px" href="qa.html">QA</a>
+  </div>
+  <div class="card" style="background:transparent;border:1px dashed var(--line)">
+    <div class="small">Returning User Access</div>
+    <label class="small">Username</label><input class="btn block" placeholder="e.g. drew"/>
+    <div style="height:8px"></div><label class="small">PIN</label><input class="btn block" placeholder="4–6 digits"/>
+  </div>
+</div></div></div></body></html>
